fixed mobile layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@
   }
 }
 
-#root {
+/* #root {
   width: 1126px;
   max-width: 100%;
   margin: 0 auto;
@@ -62,10 +62,17 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+} */
+
+#root {
+  width: 100%;
+  min-height: 100svh;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1,
